--- a/configs.yaml
+++ b/configs.yaml
@@ -32,7 +32,7 @@ defaults:
   train_out_seq: 50
   test_in_seq: 50
   test_out_seq: 150
-  in_channels: 3
+  in_channels: 1
   num_digits: 3
   n_layers: 3
 
@@ -66,39 +66,13 @@ long_frames:
   test_out_seq: 150
 
 # Experiment 1: Train and test ConvGRU on Moving MNIST with 2M frames, 50000 steps, batch size 4
-train_mmnist_cgru:
-  id: 'ConvGRU_mmnist_train'            # actual id is id_inframes_outframes eg. ConvGRU_mmnist_train_30_70 if training or ConvGRU_mmnist_train_30_170 is testing
-  ckpt_id: 'train_mmnist_cgru'
-  lr: 8e-4
-  ckpt_save_freq: 2000
-  loss_log_freq: 50
-  train_seq: 20
-  train_in_seq: 10
-  train_out_seq: 10
-  conv_encoder_out_ch: 64
-  convgru_out_ch: 64
-  depth: 1                              # num_pairs <ConvEncode, ConvGRUCell>
-
-test_mmnist_cgru:
-  id: 'ConvGRU_mmnist_test'
-  ckpt_id: 'train_mmnist_cgru'
-  data_dir: "datasets/MovingMNIST_video/test"
-  model: "ConvGRU"
-  phase: "test"
-  load_model: True
-  step: 49000                       # load saved model params for which step
-  conv_encoder_out_ch: 64
-  convgru_out_ch: 64
-  depth: 1                          # num_pairs <ConvEncode, ConvGRUCell>
-
-
 train_mmnist_cgru_len20:
   id: 'ConvGRU_mmnist_train'            # actual id is id_inframes_outframes eg. ConvGRU_mmnist_train_30_70 if training or ConvGRU_mmnist_train_30_170 is testing
   ckpt_id: 'train_mmnist_cgru_len20'
   lr: 8e-4
   ckpt_save_freq: 2000
   video_log_freq: 1000
-  loss_log_freq: 200
+  loss_log_freq: 100
   train_seq: 20
   train_in_seq: 10
   train_out_seq: 10
@@ -116,40 +90,10 @@ test_mmnist_cgru_len20:
   test_seq: 100
   test_in_seq: 10
   test_out_seq: 90
-  conv_encoder_out_ch: 64
-  convgru_out_ch: 64
+  conv_encoder_out_ch: 128
+  convgru_out_ch: 128
   depth: 1                          # num_pairs <ConvEncode, ConvGRUCell>                  # num_pairs <ConvEncode, ConvGRUCell>
-
-train_mmnist_cgru_len100:
-  id: 'ConvGRU_mmnist_train'            # actual id is id_inframes_outframes eg. ConvGRU_mmnist_train_30_70 if training or ConvGRU_mmnist_train_30_170 is testing
-  ckpt_id: 'train_mmnist_cgru_len100'
-  lr: 8e-4
-  ckpt_save_freq: 2000
-  video_log_freq: 1000
-  loss_log_freq: 200
-  train_seq: 100
-  train_in_seq: 50
-  train_out_seq: 50
-  conv_encoder_out_ch: 64
-  convgru_out_ch: 64
-  depth: 1                              # num_pairs <ConvEncode, ConvGRUCell>
-
-test_mmnist_cgru_len100:
-  id: 'ConvGRU_mmnist_test'
-  ckpt_id: 'train_mmnist_cgru_len100'
-  data_dir: "datasets/MovingMNIST_video/test"
-  model: "ConvGRU"
-  phase: "test"
-  load_model: True
-  test_seq: 200
-  test_in_seq: 50
-  test_out_seq: 150
-  conv_encoder_out_ch: 64
-  convgru_out_ch: 64
-  depth: 1    
-
-
-
+ 
 
 
 # Experiment 2: Train and test ODEConvGRU on Moving MNIST with 50000 steps
@@ -226,42 +170,8 @@ test_mmnist_odecgru_len20:
   n_ode_layers: 2                       # n_layers for the convnet in ode_encoder_func and ode_decoder_func
   z_sample: False
 
-train_mmnist_odecgru_len100:
-  id: 'ODEConv_mmnist_train'
-  model: "ODEConv"
-  ckpt_id: 'train_mmnist_odecgru_len100'
-  ckpt_save_freq: 5000
-  loss_log_freq: 100
-  video_log_freq: 2000
-  train_seq: 100
-  train_in_seq: 50
-  train_out_seq: 50
-  n_downs: 2                            # reducing/increasing resolution per encoder/decoder layer
-  conv_encoder_n_units: 32              # Out ch at end of ConvEncoder is conv_encoder_n_units * (2^n_downs)
-  neural_ode_encoder_out_ch: 128        # output channels for ode_encoder_func in models/ODEConvGRU.py
-  neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
-  neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
-  n_ode_layers: 2                       # n_layers for the convnet in ode_encoder_func and ode_decoder_func
-  z_sample: False
 
-test_mmnist_odecgru_len100:
-  id: 'ODEConv_mmnist_test'
-  model: "ODEConv"
-  ckpt_id: 'train_mmnist_odecgru_len100'
-  data_dir: "datasets/MovingMNIST_video/test"
-  phase: 'test'
-  load_model: True
-  test_seq: 200
-  test_in_seq: 50
-  test_out_seq: 150
-  n_downs: 2                            # reducing/increasing resolution per encoder/decoder layer
-  conv_encoder_n_units: 32              # Out ch at end of ConvEncoder is conv_encoder_n_units * (2^n_downs)
-  neural_ode_encoder_out_ch: 128        # output channels for ode_encoder_func in models/ODEConvGRU.py
-  neural_ode_decoder_out_ch: 128        # output channels for ode_decoder_func in models/ODEConvGRU.py
-  neural_ode_n_units: 64                # n_units for the convnet in ode_encoder_func and ode_decoder_func
-  n_ode_layers: 2                       # n_layers for the convnet in ode_encoder_func and ode_decoder_func
-  z_sample: False
-  
+# Experiment 3: Train and test ODEConvGRU-memory on Moving MNIST with 50000 steps 
 train_mmnist_odecgrumem_len20:
   id: 'ODEConv_mmnist_train'
   model: "ODEConv"
@@ -303,8 +213,18 @@ test_mmnist_odecgrumem_len20:
   z_sample: False
 
 
-
-
+train_mmnist_vidode_len20:
+  id: 'VidODE_mmnist_train'
+  model: 'VidODE'
+  ckpt_id: 'train_mmnist_vidode_len20'
+  ckpt_save_freq: 5000
+  video_log_freq: 500
+  loss_log_freq: 200
+  train_seq: 20
+  train_in_seq: 10
+  train_out_seq: 10
+  n_downs: 2
+  
 
 train_mmnist_sample_odecgru:      # (Not completed) Samples z0 from N(z_mu, z_sigma) instead of doing z0 = z_mu
   id: 'ODEConv_mmnist_train'
