--- a/configs.yaml
+++ b/configs.yaml
@@ -232,7 +232,8 @@ train_mmnist_s3vae:
   l2: 100
   l3: 1
   m: 1      # Margin for triplet loss
-
+  loss_log_freq: 50
+  video_log_freq: 1000
 
 
 
